# rico

./: .gitignore  .pdm-python  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  LICENSE  README.md  README.rst  alembic.ini  main.py  pyproject.toml  requirements.txt  run_server.sh  setup.cfg
Notebooks/: FastAvro Demo.ipynb
alembic/: env.py
alembic/versions/: 2024_03_13_1740-8d8176be0c8e_create_dev_database_flag_table.py  2024_03_13_2223-e27352687ae5_add_placeholder_hardware_models.py  2024_03_14_0157-06d2e5c9987f_serials_to_cameras_telescopes.py  2024_03_14_0259-e218632eebc6_filtername.py  2024_03_18_1821-212402a07765_add_climate_control_models.py
docs/: requirements.txt
docs/source/: alerts.rst  argus_rico.catalogs.rst  argus_rico.efte.rst  argus_rico.models.rst  argus_rico.rst  conf.py  index.rst  install.rst  modules.rst
src/argus_rico/: .slack.py.swp  __init__.py  cli.py  consumer.py  consumerB.py  efte.py  efte_stream.py  file_monitors.py  images.py  producer.py  raw_streamer.py  s3.py  segments.py  slack.py  slack_app.py  utils.py
src/argus_rico/afits/: __init__.py  argus_fits.py
src/argus_rico/catalogs/: __init__.py  atlas.py
src/argus_rico/db/: __init__.py
src/argus_rico/db/models/: __init__.py  climate.py  hardware.py  ts_mixin.py
src/argus_rico/efte/: __init__.py  db.py  efte_runner.py  images.py  processor.py  stream.py  vetnet.py  watchdog.py
src/argus_rico/efte/models/: __init__.py  evr_image.py
src/argus_rico/efte/schemas/: efte.alert.avsc  efte.candidate.avsc  efte.xmatch.avsc  raw_candidate.avsc
src/argus_rico/fast_healpix/: __init__.py  fast_healpix.py  fast_healpix_c.c  fast_healpix_c_code.c
src/argus_rico/models/: __init__.py  efte_alert.py  evr_image.py
src/argus_rico/schemas/: efte_alert.avsc  efte_candidate.avsc  efte_xmatch.avsc
src/rico/: __init__.py  cli.py  efte_runner.py  heartbeat.py  image_loader.py  images.py  producer.py  slack.py
src/rico/models/: __init__.py  evr_image.py
src/rico/schemas/: raw_candidate.avsc
tests/: test_rico.py
