[tool.poetry]
name = "argus-rico"
version = "0.2.8"
description = "Transient alert generation and database interaction for Argus and Evryscope"
authors = ["Hank Corbett"]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
python-dotenv = ">=0.19.0"
fastavro = ">=1.4.12"
pyarrow = ">=13.0.0"
confluent-kafka = ">=2.1.1"
fastapi = ">=0.95.2"
rich = ">=13.3.5"
click = ">=8.1.3"
black = ">=23.3.0"
orjson = ">=3.8.13"
slack-bolt = ">=1.18.0"
blosc = ">=1.11.1"
astropy = ">=5.3"
pymongo = ">=4.3.3"
pydantic = ">=1.10.8"
geojson-pydantic = ">=0.6.2"
numpy = ">=1.22"
sanitize-filename = ">=1.2.0"
pymongoarrow = ">=1.0.0"
pandas = ">=2.0.2"
watchdog = ">=3.0.0"
ray = ">=2.5.1"
boto3 = ">1.28.3"
tensorflow = ">=2.13.0"
scikit-image = ">=0.21.0"
psycopg = ">=3.1.9"
grpcio = "<=1.49.1"
pre-commit = ">=3.3.3"
astropy-healpix = ">=0.7"
# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
urllib3 = ">=1.25.4,<1.27"

[tool.poetry.scripts]
rico = "argus_rico.cli:main"

[tool.poetry.group.dev.dependencies]
detect-secrets = ">=1.4.0"
sphinx-click = ">=4.4.0"
pytest = ">=6.2"
mypy = ">=0.931"
isort = ">=5.10.1"
flake8 = ">=4.0.1"
Sphinx = ">=7.0.1"
pre-commit = ">=3.3.2"
ipython = ">=8.14.0"
autodoc-pydantic = {version = "<2.0.0", extras = ["eradatic"]}
graphviz = ">=0.20.1"


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = "true"
force_grid_wrap = 0
use_parentheses = "true"
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

