[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-rico"
version = "0.3.3"
description = "Transient alert generation and database interaction for Argus and Evryscope"
authors = [{ name = "Hank Corbett" }]
requires-python = ">=3.9,<4"
dependencies = [
    "python-dotenv>=0.19.0",
    "fastavro>=1.4.12",
    "pyarrow>=13.0.0",
    "confluent-kafka>=2.1.1",
    "click>=8.1.3",
    "orjson>=3.8.13",
    "slack-bolt>=1.18.0",
    "blosc>=1.11.1",
    "astropy>=5.3",
    "pymongo>=4.3.3",
    "pydantic>=1.10.8",
    "geojson-pydantic>=0.6.2",
    "numpy>=1.22",
    "sanitize-filename>=1.2.0",
    "pymongoarrow>=1.0.0",
    "pandas>=2.0.2",
    "watchdog>=3.0.0",
    "ray>=2.5.1",
    "boto3>1.28.3",
    "scikit-image>=0.21.0",
    "psycopg[binary]>=3.1.9",
    "astropy-healpix>=0.7",
    "sqlalchemy>=2.0.28,<3",
]

[project.optional-dependencies]
tf = ["tensorflow>=2.13.0"]
dbadmin = ["alembic>=1.13.1", "alembic-utils>=0.8.2"]

[project.scripts]
rico = "argus_rico.cli:main"

[dependency-groups]
dev = [
    "detect-secrets>=1.4.0",
    "sphinx-click>=4.4.0",
    "pytest>=6.2",
    "mypy>=0.931",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "sphinx>=7.0.1",
    "ipython>=8.14.0",
    "pre-commit>=3.3.3",
    "autodoc-pydantic<2.0.0",
    "graphviz>=0.20.1",
    "black>=23.3.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
